# cardinal-harness

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
artifacts/bench/: scaling.jsonl
artifacts/eval/: comparison_summary.json  likert_curves.csv  likert_eval.jsonl  synthetic_curves.csv  synthetic_eval.jsonl
artifacts/eval/offline-workflow/: cardinal_curves.csv  cardinal_synthetic.jsonl  cardinal_vs_likert_delta.csv  cardinal_vs_likert_summary.txt  likert_baseline.jsonl  likert_curves.csv
artifacts/live/anp-roadmap-2026-07-05/: README.md  anp-cache.sqlite  report.json  run.stderr
docs/: ALGORITHM.md  ANP.md  BENCHMARK.md  BENCHMARKS.md  COMPARISON.md  DESIGN_ATLAS.md  EVALUATION.md  FIRST_PRINCIPLES.md  FOUNDATIONS_MATRYOSHKA.md  GX10_PAIRWISE_RATIO_FINETUNE.md  LOGPROBS.md  MATH_FRONTIER.md  MODEL.md  PRINCIPLES.md  PROMPTS.md  PUBLIC_BENCH.md  RESEARCH_THREADS.md  TESTING.md  WHAT_WHY_HOW.md  WORKED_EXAMPLE.md  canonicality.md
examples/: anp_demo_request.json  bench_scaling.rs  corpus_map.rs  design_atlas.rs  dl_floor_live.rs  flywheel_manifest.json  judge_portfolio.rs  live-method-suite.json  live_method_comparison.py  live_openrouter_benchmark.py  model-policy-cost-aware-fast.json  model-policy-frontier-ladder.json  model-policy-quality-only.json  multi-rerank-request.json  offline_eval_delta.py  pipeline_request.json  prompt-experiment-variants.json  quickstart.rs  simple-rerank-request.json  sort-demo.txt  transitivity_live.rs  wording_gains.rs
experimental/: README.md
notes/adaptive-logprobs-2026-07-19/: findings.md  probe_cache.py  probe_openai_direct.py  probe_openrouter_unlock.py  probe_twophase.py
notes/council-essence-2026-07-09/: SYNTHESIS.md  prompt-bundle.txt  seat-claude-fable5.md  seat-gemini-3.1-pro.md  seat-gpt5.5-xhigh.md
notes/diamond-archaeology-2026-07-06/: findings.md
notes/ideation-2026-07-05/: benchmark-adversary.md  differentiation.md  invariance-theory.md
notes/manifund-campaign-2026-07-13/: p0-results.md  p1-results.md  p2-results.md  plan.md
notes/math-frontier-2026-07-05/: graph-design-constraint.md  literature.md  theory.md
notes/red-team-2026-07-09/: SYNTHESIS.md  book-test.md  doctrine.md  math-register.md  parsimony.md  strategy.md
scripts/: manifund_fetch.py  manifund_prep.py
site/: index.html
src/: anp.rs  axes.rs  cache.rs  censored_likelihood.rs  discrete.rs  gain_calibration.rs  judgement_run.rs  landing.rs  lib.rs  logprob_resampling.rs  packet.rs  pipeline.rs  prompts.rs  rating_engine.rs  repeat_pooling.rs  text_chunking.rs  trait_search.rs
src/commander/: briefing.rs  dashboard.rs  decompose.rs  extract.rs  mod.rs  reflection.rs  scan.rs  store.rs
src/gateway/: error.rs  mod.rs  openrouter.rs  pricing.rs  types.rs  usage.rs
src/judgement_run/: edge.rs
src/pipeline/: core.rs  flywheel.rs
src/rerank/: anp.rs  bench.rs  canonize.rs  comparison.rs  consortium.rs  dataset.rs  elaborate.rs  ensemble.rs  evaluation.rs  experiments.rs  explain.rs  gates.rs  hooks.rs  mod.rs  model_policy.rs  multi.rs  options.rs  orbit.rs  policy_registry.rs  proposal_json.rs  report.rs  sampling.rs  simple.rs  slate.rs  sort.rs  spin.rs  trace.rs  transitivity.rs  types.rs  wordings.rs
tests/: adversarial_judges.rs  cache_key.rs  cache_sqlite.rs  calibration_coverage.rs  censored_likelihood.rs  cli_smoke.rs  commander_e2e.rs  evaluation_e2e.rs  evidence_path.rs  explain_e2e.rs  gain_calibration.rs  gateway_openrouter.rs  hodge_split.rs  judge_bench.rs  judge_explain_cli.rs  judge_portfolio.rs  judgement_run.rs  ladder_curl.rs  live_artifact_pages.rs  live_method_evidence.rs  live_method_receipts.rs  loo_diagnostics.rs  loo_receipts.rs  metamorphic_invariance.rs  method_dominance.rs  multi_objective.rs  multi_rerank_cancel.rs  multi_rerank_wiremock_e2e.rs  ordinal_prompt_validation.rs  packet.rs  pipeline_workflow.rs  planner_efficiency.rs  planner_regret.rs  program_equivalence.rs  property_solver.rs  rating_engine.rs  repeat_pooling.rs  rerank_trace.rs  sort_cli.rs  trace_jsonl.rs  (+3 more)
training/gx10_pairwise/: README.md  compare_replay.py  pyproject.toml  seed_cache.py  train_sft.py
(+2998 files in other folders)
