[package]
name = "cardinal-harness"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The highest quality way to have LLMs put numbers on things — pairwise ratio judgments, robust statistics, uncertainty-aware stopping"
readme = "README.md"
repository = "https://github.com/XyraSinclair/cardinal-harness"
homepage = "https://github.com/XyraSinclair/cardinal-harness"
documentation = "https://docs.rs/cardinal-harness"
keywords = ["llm", "reranking", "ranking", "pairwise", "cardinal"]
categories = ["algorithms", "science", "command-line-utilities"]

[dependencies]
async-trait = "0.1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
fancy-regex = "0.17"
fs2 = "0.4"
futures = "0.3"
glob = "0.3"
nalgebra = "0.33"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statrs = "0.18"
tempfile = "3"
thiserror = "2"
tiktoken-rs = "0.6"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
