[package]
name = "cardinal-harness"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Sort and rank anything with LLMs: pairwise ratio judgements fitted into cardinal scores with uncertainty, active pair selection, and full cost receipts"
readme = "README.md"
repository = "https://github.com/XyraSinclair/cardinal-harness"
homepage = "https://github.com/XyraSinclair/cardinal-harness"
documentation = "https://docs.rs/cardinal-harness"
keywords = ["llm", "ranking", "sorting", "pairwise", "reranking"]
categories = ["algorithms", "science", "command-line-utilities"]
include = [
    "/src/**",
    "/examples/*.rs",
    "/examples/*.json",
    "/docs/**",
    "/CHANGELOG.md",
    "/CITATION.cff",
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
]

[features]
default = ["sqlite-store"]
sqlite-store = ["rusqlite", "fs2"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-trait = "0.1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
fancy-regex = "0.17"
fs2 = { version = "0.4", optional = true }
futures = "0.3"
nalgebra = "0.34"
rand = "0.8"
regex = "1"
reqwest = { version = "0.13", features = ["json", "gzip", "stream"] }
rusqlite = { version = "0.38", features = ["bundled"], optional = true }
seriate = { git = "https://github.com/XyraSinclair/seriate", tag = "v0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statrs = "0.18"
tempfile = "3"
thiserror = "2"
tiktoken-rs = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
